--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ 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 }}
           publish_dir: ./public
