--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ FEED_PAGES_DEPLOY }}
+          github_token: ${{ secrets.FEED_PAGES_DEPLOY }}
           publish_dir: ./public
