--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -5,5 +5,5 @@
 
 # cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
 sources:
+  - href: https://lishuhang.me/beta/feed
   - href: https://rsshub.app/xiaohongshu/user/565abd1403eb843eb0ef217c/notes
-  - href: https://rsshub.app/zhihu/people/answers/lishuhang
